--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,98 @@
 appdirs==1.4.4
-attrs==19.3.0
-Automat==0.8.0
+attrs==21.4.0
+Automat==20.2.0
+beautifulsoup4==4.11.1
 blinker==1.4
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-#cloud-init=21.2
-colorama==0.4.3
-#command-not-found==0.3
+certifi==2021.10.8
+cffi==1.14.5
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.4
 configobj==5.0.6
 constantly==15.1.0
-cryptography==2.8
-dbus-python>=1.2.16
-distlib==0.3.2
-distro==1.4.0
-#distro-info===0.23ubuntu1
-entrypoints==0.3
-filelock==3.0.12
-httplib2==0.14.0
-hyperlink==19.0.0
-idna==2.8
-importlib-metadata==1.5.0
-incremental==16.10.1
-Jinja2==2.10.1
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-#language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-MarkupSafe==1.1.0
-more-itertools==4.2.0
-netifaces==0.10.4
-oauthlib==3.1.0
-pexpect==4.6.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
+cryptography==37.0.2
+dbus-python==1.2.18
+decorator==4.4.2
+distlib==0.3.4
+distro==1.7.0
+entrypoints==0.4
+fasteners==0.16.3
+filelock==3.6.0
+Flask==2.1.2
+Flask-DebugToolbar==0.13.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.0
+httplib2==0.20.4
+hyperlink==21.0.0
+idna==3.3
+importlib-metadata==4.11.3
+importlib-resources==5.7.1
+incremental==21.3.0
+ipython-genutils==0.2.0
+itsdangerous==2.1.2
+jeepney==0.8.0
+Jinja2==3.1.2
+jsonpatch==1.32
+jsonpointer==2.3
+jsonschema==4.5.1
+jupyter-core==4.7.1
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lyricsgenius==3.0.1
+MarkupSafe==2.1.1
+more-itertools==8.13.0
+nbformat==5.1.3
+netifaces==0.11.0
+networkx==2.5.1
+oauthlib==3.2.0
+pbr==5.6.0
+pexpect==4.8.0
+platformdirs==2.5.2
+psutil==5.8.0
+psycopg2-binary==2.9.1
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.20.1
+pycparser==2.20
+pydot==1.4.2
+pydotplus==2.0.2
+Pygments==2.9.0
+PyGObject==3.42.1
+PyHamcrest==2.0.3
+PyJWT==2.3.0
 pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyrsistent==0.15.5
-pyserial==3.4
-#python-apt==2.0.0+ubuntu0.20.4.5
-#python-debian===0.1.36ubuntu1
-PyYAML>=5.3.1
-requests>=2.22.0
-requests-unixsocket>=0.2.0
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
-#six==1.14.0
-six>=1.14
-#sox==4.1
-sos
-ssh-import-id==5.10
+PyNaCl==1.5.0
+pyOpenSSL==22.0.0
+pyparsing==2.4.7
+pyrsistent==0.18.1
+pyserial==3.5
+PyYAML==6.0
+pyzmq==22.1.0
+requests==2.27.1
+requests-unixsocket==0.3.0
+SecretStorage==3.3.2
+service-identity==21.1.0
+simplejson==3.17.6
+six==1.16.0
+sos==0.23.0
+soupsieve==2.3.2.post1
+spotipy==2.19.0
+SQLAlchemy==1.4.20
+ssh-import-id==5.11
 systemd-python==234
-Twisted==18.9.0
-#ubuntu-advantage-tools==27.0
-#ufw==0.36
-#unattended-upgrades==0.1
-#urllib3==1.25.3
-urllib3
-#virtualenv==20.4.7
-virtualenv
-wadllib==1.3.3
-zipp==1.0.0
-zope.interface==4.7.1
-beautifulsoup4>=4.9.3
-lyricsgenius>=3.0.1
-soupsieve>=2.2.1
-spotipy>=2.18.0
-Flask>=1.1.2
-Flask-DebugToolbar>=0.10.1
-Flask-SQLAlchemy>=2.4.4
+testresources==2.0.1
+tqdm==4.61.1
+traitlets==5.0.5
+Twisted==22.4.0
+typing-extensions==4.2.0
+urllib3==1.26.9
+virtualenv==20.14.1
+wadllib==1.3.6
+Werkzeug==2.1.2
+xxhash==2.0.2
+zipp==3.8.0
+zope.interface==5.4.0
