support for instrumental tracks, update model, update login componemts, bug fixes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,14 @@
             ],
             "jinja": true,
             "justMyCode": true
+        },
+        {
+            "name": "Python: run current file",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "args": [],
+            "console": "integratedTerminal"
         }
     ]
 }
