--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "safe",
+  "name": "SafeSound",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.19",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
-    "immer": "^8.0.1",
+    "immer": "^8.0.4",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^1.6.6",
     "react-dom": "^17.0.2",
-    "react-responsive-carousel": "^3.2.21",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "4.0.3",
+    "typescript": "^4.8.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -43,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://safesound.aliciaalbo.com"
 }
