--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ pycparser==2.20
 pydot==1.4.2
 pydotplus==2.0.2
 Pygments==2.9.0
-PyGObject==3.42.1
+#PyGObject==3.42.1
 PyHamcrest==2.0.3
 PyJWT==2.3.0
 pymacaroons==0.13.0
@@ -90,9 +90,11 @@ traitlets==5.0.5
 Twisted==22.4.0
 typing-extensions==4.2.0
 urllib3==1.26.9
+uwsgi==2.0.20
 virtualenv==20.14.1
 wadllib==1.3.6
 Werkzeug==2.1.2
 xxhash==2.0.2
 zipp==3.8.0
 zope.interface==5.4.0
+
